--- a/resources/views/test.html
+++ b/resources/views/test.html
@@ -4,34 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/habibmhamadi/multi-select-tag@3.0.1/dist/css/multi-select-tag.css">
+    <!-- Font Awesome -->
+<link
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+rel="stylesheet"
+/>
+<!-- Google Fonts -->
+<link
+href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+rel="stylesheet"
+/>
+<!-- MDB -->
+<link
+href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.3.2/mdb.min.css"
+rel="stylesheet"
+/>
 </head>
 <body>
     
-    <select name="countries" id="countries" multiple>
-        <option value="1">Afghanistan</option>
-        <option value="2">Australia</option>
-        <option value="3">Germany</option>
-        <option value="4">Canada</option>
-        <option value="5">Russia</option>
-    </select>
-    <script src="https://cdn.jsdelivr.net/gh/habibmhamadi/multi-select-tag@3.0.1/dist/js/multi-select-tag.js"></script>
-    <script>
+    <select class="form-multi-select" id="ms1" multiple data-coreui-search="true">
+        <option value="0">Angular</option>
+        <option value="1">Bootstrap</option>
+        <option value="2">React.js</option>
+        <option value="3">Vue.js</option>
+        <optgroup label="backend">
+          <option value="4">Django</option>
+          <option value="5">Laravel</option>
+          <option value="6">Node.js</option>
+        </optgroup>
+      </select>
       
-        new MultiSelectTag('countries', {
-    rounded: true,    // default true
-    shadow: true,      // default false
-    placeholder: 'Search',  // default Search...
-    tagColor: {
-        textColor: '#327b2c',
-        borderColor: '#92e681',
-        bgColor: '#eaffe6',
-    },
-    onChange: function(values) {
-        console.log(values)
-    }
-})
-    </script>
-
+<script
+type="text/javascript"
+src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.3.2/mdb.umd.min.js"
+></script>
 </body>
 </html>
