--- a/public/css/store.css
+++ b/public/css/store.css
@@ -61,6 +61,7 @@
         border: solid #E0E0E0 1px;
         border-radius: 4px;
         z-index: -1;
+        position: relative;
     }
 
     .categories-header {
@@ -225,13 +226,12 @@
         font-size: 15px
     }
 
-    .card form {
+    .card > form {
         height:0px;
         overflow: hidden;
         bottom: 0;
         transition: all 0.6s;
     }
-
     .card:hover form {
         height: max-content;
         transition:  all 0.6s;
@@ -497,3 +497,12 @@
         width: 150px;
         height: 150px;
     }
+    .subcategories-side{
+        background-color: red;
+        width: 200px;
+        height: 200px;
+        position: absolute;
+        z-index: 1000;
+        left: 100%;
+    }
+   
